update of savefig aestetic chenges of lables

--- a/72_2D_MFPADs_experiment.ipynb
+++ b/72_2D_MFPADs_experiment.ipynb
@@ -520,7 +520,30 @@
     "        # ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "    fugi.overlaygraph(fig)\n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/72MFPAD_\"+CH+\"_\"+en+\"_SCLCR_phi_exp.png\", dpi=300, transparent=False)"
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/72MFPAD_\"+CH+\"_\"+en+\"_SCLCR_phi_exp.png\", dpi=300, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if fileSCL and fileSCR is not None:\n",
+    "    #SUM of S enantiomers two different helicities\n",
+    "    # fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "    fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
+    "\n",
+    "    #NOTE for cos ordered the scannig order of axis has to be np.flip(axes.T,axis=1).ravel()\n",
+    "    for i,ax in enumerate(np.flip(axes.T,axis=1).ravel()):\n",
+    "        #old adding up\n",
+    "        # ax.contourf(phiM,cosM,fugi.smoothgauss(MFPAD_SCLCR_phi[i],0.3,0.6).T, levels=5)\n",
+    "        cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_SCLCR_phi[i].T, ax=ax, cmap=cmap_temp, kind=\"linear\", xstep=5, ystep=0.05, n=15)\n",
+    "        ax.tick_params(labelsize=12)\n",
+    "        # ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
+    "\n",
+    "    fugi.overlaygraph(fig)\n",
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/72MFPAD_\"+CH+\"_\"+en+\"_SCLCR_phi_cmaptemp_exp.png\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -543,7 +566,7 @@
     "    # ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "fugi.overlaygraph(fig)\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/72MFPAD_\"+CH+\"_\"+en+\"_RCLCR_phi_exp.png\", dpi=300, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/72MFPAD_\"+CH+\"_\"+en+\"_RCLCR_phi_exp.png\", dpi=300, transparent=False)\n",
     "plt.show()"
    ]
   },
@@ -565,7 +588,7 @@
     "    # ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "fugi.overlaygraph(fig)\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/72MFPAD_\"+CH+\"_\"+en+\"_total_phi_exp.png\", dpi=300, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/72MFPAD_\"+CH+\"_\"+en+\"_total_phi_exp.png\", dpi=300, transparent=False)\n",
     "plt.show()"
    ]
   },
@@ -589,7 +612,7 @@
     "    # ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "fugi.overlaygraph(fig)\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/72MFPAD_\"+CH+\"_\"+en+\"_total_phi_cmaptemp_exp.png\", dpi=300, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/72MFPAD_\"+CH+\"_\"+en+\"_total_phi_cmaptemp_exp.png\", dpi=300, transparent=False)\n",
     "plt.show()"
    ]
   },
@@ -611,7 +634,7 @@
     "    ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "fugi.overlaygraph(fig)\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/72MFPAD_\"+CH+\"_\"+en+\"_total_phi_cmaptemp_exp.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/72MFPAD_\"+CH+\"_\"+en+\"_total_phi_cmaptemp_exp.png\", dpi=300, transparent=False)\n",
     "plt.show()"
    ]
   },
@@ -633,7 +656,7 @@
     "        #ax.text(0, 0, cosphi_adj_cos[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "    fugi.overlaygraph(fig)\n",
-    "    # fig.savefig(\"../PYTHON_graphs/OUTPUTS/72MFPAD_\"+CH+\"_\"+en+\"_SCR_cos_exp.png\", dpi=300, transparent=False)\n",
+    "    # fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/72MFPAD_\"+CH+\"_\"+en+\"_SCR_cos_exp.png\", dpi=300, transparent=False)\n",
     "    plt.show()"
    ]
   },
@@ -661,7 +684,7 @@
     "\n",
     "    fugi.overlaygraph(fig)#, title=\"MFPAD SCL\")\n",
     "    # fig.colorbar(cs, ax=axes.ravel().tolist())\n",
-    "    # fig.savefig(\"../PYTHON_graphs/OUTPUTS/72MFPAD_\"+CH+\"_\"+en+\"_SCL_cos_exp.png\", dpi=300, transparent=False)\n",
+    "    # fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/72MFPAD_\"+CH+\"_\"+en+\"_SCL_cos_exp.png\", dpi=300, transparent=False)\n",
     "    plt.show()"
    ]
   },
@@ -683,7 +706,7 @@
     "        #ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "    fugi.overlaygraph(fig)\n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/72MFPAD_\"+CH+\"_\"+en+\"_SCR_phi_exp.png\", dpi=300, transparent=False)\n",
+    "    # fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/72MFPAD_\"+CH+\"_\"+en+\"_SCR_phi_exp.png\", dpi=300, transparent=False)\n",
     "    plt.show()"
    ]
   },
@@ -705,7 +728,7 @@
     "        #ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "    fugi.overlaygraph(fig)\n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/72MFPAD_\"+CH+\"_\"+en+\"_SCL_phi_exp.png\", dpi=300, transparent=False)\n",
+    "    # fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/72MFPAD_\"+CH+\"_\"+en+\"_SCL_phi_exp.png\", dpi=300, transparent=False)\n",
     "    plt.show()"
    ]
   },
@@ -726,7 +749,7 @@
     "    #ax.text(0, 0, cosphi_adj_cos[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "fugi.overlaygraph(fig)\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/72MFPAD_\"+CH+\"_\"+en+\"_RCR_cos_exp.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/72MFPAD_\"+CH+\"_\"+en+\"_RCR_cos_exp.png\", dpi=300, transparent=False)\n",
     "plt.show()"
    ]
   },
@@ -747,7 +770,7 @@
     "    #ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "fugi.overlaygraph(fig)\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/72MFPAD_\"+CH+\"_\"+en+\"_RCR_phi_exp.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/72MFPAD_\"+CH+\"_\"+en+\"_RCR_phi_exp.png\", dpi=300, transparent=False)\n",
     "plt.show()"
    ]
   },
@@ -768,7 +791,7 @@
     "    #ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "fugi.overlaygraph(fig)\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/72MFPAD_\"+CH+\"_\"+en+\"_RCL_cos_exp.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/72MFPAD_\"+CH+\"_\"+en+\"_RCL_cos_exp.png\", dpi=300, transparent=False)\n",
     "plt.show()"
    ]
   },
@@ -782,7 +805,7 @@
     "    MFPAD_SCL_sum_n2=fugi.normalise_with_err(MFPAD_SCL_sum,normtype=2)\n",
     "    fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "    # cs=ax.contourf(phiM,cosM,MFPAD_SCL_sum_n2.T, cmap=cmap_temp, levels=20)\n",
-    "    cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_SCL_sum_n2.T, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01, n=20)\n",
+    "    cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_SCL_sum_n2.T, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01, n=20, limits=True)\n",
     "\n",
     "    ax.set_title(\"SCL tot MFPAD n2 \"+CH+\"_\"+en)\n",
     "\n",
@@ -795,31 +818,7 @@
     "    cbar.ax.set_ylabel('normalised counts')\n",
     "    ax.set_aspect(aspect)\n",
     "\n",
-    "    # fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCL_MFPAD_single_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if fileSCL and fileSCR is not None:\n",
-    "    fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "    # cs=ax.contourf(phiM,cosM,MFPAD_tot_sum.T, cmap=cmap_temp, levels=20)\n",
-    "    cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_tot_sum.T, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01, n=20)\n",
-    "    ax.set_title(\"total MFPAD \"+CH+\"_\"+en)\n",
-    "\n",
-    "    aspect=(phiM.max()/cosM.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
-    "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
-    "    cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
-    "    cbar.set_ticks([MFPAD_tot_sum.min(),MFPAD_tot_sum.max()])\n",
-    "    cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "    cbar.ax.set_ylabel('normalised counts')\n",
-    "    ax.set_aspect(aspect)\n",
-    "\n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCR_MFPAD_single_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
+    "    # fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/SCL_MFPAD_single_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -876,7 +875,7 @@
     "\n",
     "    cs1=ax[0][0].contourf(phiM,cosM,MFPAD_RCR_sum.T,cmap=cmap_temp)\n",
     "    ax[0][0].set_title(\"RCR\")\n",
-    "    ax[0][0].set_ylabel('cos(theta) [adm]')\n",
+    "    ax[0][0].set_ylabel('cos(\\u03D1) [adm]')\n",
     "    # fig.colorbar(cs1, extend='both', shrink=0.9, ax=ax[0][0])\n",
     "    ax[0][0].set_aspect(aspect)\n",
     "\n",
@@ -888,7 +887,7 @@
     "    cs3=ax[1][0].contourf(phiM,cosM,MFPAD_RCL_sum.T,cmap=cmap_temp)\n",
     "    ax[1][0].set_title(\"RCL\")\n",
     "    ax[1][0].set_xlabel('phi [DEG]')\n",
-    "    ax[1][0].set_ylabel('cos(theta) [adm]')\n",
+    "    ax[1][0].set_ylabel('cos(\\u03D1) [adm]')\n",
     "    # fig.colorbar(cs3,extend='both', shrink=0.9, ax=ax[1][0])\n",
     "    ax[1][0].set_aspect(aspect)\n",
     "\n",
@@ -899,7 +898,7 @@
     "    ax[1][1].set_aspect(aspect)\n",
     "\n",
     "    st.set_y(0.95)\n",
-    "    # fig.savefig(\"../PYTHON_graphs/OUTPUTS/total_MFPAD_sum_RS_test_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
+    "    # fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/total_MFPAD_sum_RS_test_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -909,34 +908,34 @@
    "outputs": [],
    "source": [
     "#this can be all added togheter to create the total sum\n",
-    "fig,ax = plt.subplots(1,2, figsize=(15, 15), sharey=True)\n",
+    "fig,ax = plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
     "# st = fig.suptitle(\"MFPAD \"+CH+\"_\"+en, fontsize=\"x-large\", y=0.9)\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "\n",
     "# cs1=ax[0].contourf(phiM,cosM,MFPAD_RCR_sum.T,cmap=cmap_temp)\n",
-    "cs0,ax[0]=fugi.plot_interpolation(phiM,cosM,MFPAD_RCR_sum.T, ax=ax[0], cmap=cmap_temp, xstep=1, ystep=0.01)\n",
+    "cs0,ax[0]=fugi.plot_interpolation(phiM,cosM,MFPAD_R_sum.T, ax=ax[0], cmap=cmap_temp, xstep=1, ystep=0.01, limits=True)\n",
     "\n",
-    "ax[0].set_title(\"RCR\")\n",
-    "ax[0].set_ylabel('cos(theta) [adm]')\n",
-    "ax[0].set_xlabel('phi [DEG]')\n",
-    "# fig.colorbar(cs1, extend='both', shrink=0.9, ax=ax[0])\n",
+    "ax[0].set_title(\"MFPAD R - CLCR \"+CH+\"_\"+en)\n",
+    "ax[0].set_ylabel('cos(\\u03D1) [adm]')\n",
+    "ax[0].set_xlabel('\\u03D5 [DEG]')\n",
     "ax[0].set_aspect(aspect)\n",
+    "cbar0=fig.colorbar(cs0, shrink=0.9, ax=ax[0])\n",
+    "cbar0.set_ticks([MFPAD_R_sum.min(),MFPAD_R_sum.max()])\n",
+    "cbar0.set_ticklabels([\"min\",\"max\"])\n",
     "\n",
     "# cs1=ax[1].contourf(phiM,cosM,MFPAD_RCL_sum.T,cmap=cmap_temp)\n",
-    "cs1,ax[1]=fugi.plot_interpolation(phiM,cosM,MFPAD_RCL_sum.T, ax=ax[1], cmap=cmap_temp, xstep=1, ystep=0.01)\n",
+    "cs1,ax[1]=fugi.plot_interpolation(phiM,cosM,MFPAD_R_sum.T, ax=ax[1], cmap=cmap_temp, xstep=1, ystep=0.01, limits=True)\n",
     "\n",
-    "ax[1].set_title(\"SCR_flip\")\n",
-    "# ax[1].set_ylabel('cos(theta) [adm]')\n",
-    "ax[1].set_xlabel('phi [DEG]')\n",
-    "# fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax[1])\n",
+    "ax[1].set_title(\"MFPAD S CLCR flip \"+CH+\"_\"+en)\n",
+    "ax[1].set_ylabel('cos(\\u03D1) [adm]')\n",
+    "ax[1].set_xlabel('\\u03D5 [DEG]')\n",
     "ax[1].set_aspect(aspect)\n",
-    "# cbar = fig.colorbar(cs1, ax=ax[1],shrink=0.9)\n",
-    "# cbar.set_ticks([MFPAD_SCL_sum_n2.min(),MFPAD_SCL_sum_n2.max()])\n",
-    "# cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "# cbar.ax.set_ylabel('normalised counts')\n",
+    "cbar1 = fig.colorbar(cs1, ax=ax[1],shrink=0.9)\n",
+    "cbar1.set_ticks([MFPAD_S_sum.min(),MFPAD_S_sum.max()])\n",
+    "cbar1.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar1.ax.set_ylabel('normalised counts')\n",
     "\n",
-    "\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/total_MFPAD_sum_R_test_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/total_MFPAD_sum_R_test_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -948,7 +947,7 @@
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "# cs=ax.contourf(phiM,cosM,MFPAD_tot_sum.T, cmap=cmap_temp, levels=15)\n",
     "cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_tot_sum.T, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01, n=20)\n",
-    "ax.set_title(\"MFPAD single sum \"+CH+\"_\"+en)\n",
+    "ax.set_title(\"MFPAD R-S sum \"+CH+\" \"+en)\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "ax.set_xlabel('\\u03D5 [DEG]')\n",
@@ -959,7 +958,7 @@
     "cbar.ax.set_ylabel('normalised counts')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/total_MFPAD_singlesum_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/total_MFPAD_R-S-CLCR_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -1026,7 +1025,7 @@
     "# cs=ax.contourf(phiM,cosM,mPECD.T*100, cmap=cmap_temp, levels=10)\n",
     "cs,ax=fugi.plot_interpolation(phiM,cosM,mPECD.T*100, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01)\n",
     "\n",
-    "ax.set_title(\"contrast map \"+CH+\"_\"+en)\n",
+    "ax.set_title(\"Contrast map \"+CH+\" \"+en)\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "ax.set_xlabel('\\u03D5 [DEG]')\n",
@@ -1037,7 +1036,7 @@
     "cbar.ax.set_ylabel('% of asymmetry')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/contrastmap_singlesum_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/contrastmap_R-S-CLCR_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -1050,7 +1049,7 @@
     "    fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "    # cs=ax.contourf(phiM,cosM,mPECD_hires.T*100, cmap=cmap_temp, levels=10)\n",
     "    cs,ax=fugi.plot_interpolation(phiM,cosM,mPECD_hires.T*100, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01)\n",
-    "    ax.set_title(\"contrast map \"+CH+\"_\"+en)\n",
+    "    ax.set_title(\"Contrast map \"+CH+\" \"+en)\n",
     "\n",
     "    aspect=(phiM.max()/cosM.max())\n",
     "    ax.set_xlabel('\\u03D5 [DEG]')\n",
@@ -1061,7 +1060,7 @@
     "    cbar.ax.set_ylabel('% of asymmetry')\n",
     "    ax.set_aspect(aspect)\n",
     "\n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/contrastmap_singlesum_highres_\"+CH+\"_\"+en+\"_exp.png\", dpi=300,  transparent=False)"
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/contrastmap_R-S-CLCR_highres_\"+CH+\"_\"+en+\"_exp.png\", dpi=300,  transparent=False)"
    ]
   },
   {
@@ -1074,7 +1073,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3.8.10 64-bit ('base': conda)",
    "name": "python388jvsc74a57bd00314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
   },
   "language_info": {
@@ -1087,7 +1086,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   },
   "metadata": {
    "interpreter": {
