contrast map in inside 72MFPAD

--- a/OLD_ipynb/contrast_map.ipynb
+++ b/OLD_ipynb/contrast_map.ipynb
@@ -360,7 +360,7 @@
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "# cs=ax.contourf(phiM,cosM,mPECD_norm.T*100, cmap=cmap_temp)#, levels=24)\n",
     "# cs=ax.pcolormesh(phiM,cosM,mPECD_norm.T*100,shading='gouraud', vmin=-8.5, vmax=8.5, cmap=cmap_temp)\n",
-    "cs,ax=fugi.plot_interpolation(phiM,cosM,mPECD_norm.T*100, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01)\n",
+    "cs,ax=fugi.plot_interpolation(phiM,cosM,mPECD_norm.T*100, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01, gaussian=7)\n",
     "\n",
     "ax.set_title(\"contrast map \"+CH+\"_\"+en)\n",
     "\n",
