new saving location new channel 12 and IDs

--- a/standard_graphs.ipynb
+++ b/standard_graphs.ipynb
@@ -38,8 +38,10 @@
     "import functions_giammi as fugi\n",
     "cmap_temp, cmap_temp_go, Magma_r, Seismic_r = fugi.customcmaps()\n",
     "\n",
-    "dir = r\"../PYTHON_graphs/OUTPUTS/N2_calibration/\"\n",
-    "allfiles = (glob.glob(\"../PYTHON_graphs/DATA/Standard_grpahs/*.root\"))\n",
+    "dir = r\"../PYTHON_graphs/OUTPUTS/standard_graphs/\"\n",
+    "dirN2 = r\"../PYTHON_graphs/OUTPUTS/N2_calibration/\"\n",
+    "\n",
+    "allfiles = (glob.glob(\"../PYTHON_graphs/DATA/Standard_graphs/*.root\"))\n",
     "\n",
     "cmap_viridis = mpl.cm.get_cmap('viridis')"
    ]
@@ -82,7 +84,10 @@
     "        x_el,y_el,counts_el_xy=fugi.import_TH2Dgeneric(elec_xy,elec_xy.keys()[0])\n",
     "    elif \"TFMOX_pipico_short\" in el:\n",
     "        tfmox_pipico = uproot.open(el)\n",
-    "        tmox_tof1,tmox_tof2,counts_pipico_tmox=fugi.import_TH2Dgeneric(tfmox_pipico,tfmox_pipico.keys()[0])\n"
+    "        tmox_tof1,tmox_tof2,counts_pipico_tmox=fugi.import_TH2Dgeneric(tfmox_pipico,tfmox_pipico.keys()[0])\n",
+    "    elif \"PIPICO_CH9\" in el:\n",
+    "        tfmox_pipico_ch9 = uproot.open(el)\n",
+    "        tof9_1,tof9_2,couts_pipico_9=fugi.import_TH2Dgeneric(tfmox_pipico_ch9,tfmox_pipico_ch9.keys()[0])"
    ]
   },
   {
@@ -100,16 +105,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IDs = [\"ID_ALL_mol_e0_valid/EN_gate/\",\"ID1_mol_e0_valid/EN_gate/\",\"ID2_mol_e0_valid/EN_gate/\",\"ID3_mol_e0_valid/EN_gate/\"]\n",
+    "IDs = [\"ID_ALL_mol_e0_valid/EN_gate/\",\"ID1_mol_e0_valid/EN_gate/\",\"ID2_mol_e0_valid/EN_gate/\",\"ID3_mol_e0_valid/EN_gate/\", \"ID4_mol_e0_valid/EN_gate/\"]\n",
+    "ID=str(IDs[3]).split(\"_\")[0]\n",
+    "\n",
     "# dirs = [\"MFPADs_multinew/\",\"MFPADs_multinew_phi/\"]\n",
     "\n",
-    "fileSCR_11 = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH11_550eV_CR_Knov.root\")\n",
+    "fileSCR_12 = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH11_550eV_CR_Knov_test.root\")\n",
+    "path12 = \"angular_distr_el/CH12/\"\n",
+    "loc12=path12+IDs[1]\n",
+    "\n",
+    "fileSCR_11 = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH11_550eV_CR_Knov_test.root\")\n",
     "path11 = \"angular_distr_el/CH11/\"\n",
-    "loc11=path11+IDs[0]\n",
+    "loc11=path11+IDs[3]\n",
     "\n",
     "fileSCR_9 = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH9_550eV_CR_Knov.root\")\n",
     "path9 = \"angular_distr_el/CH9/\"\n",
-    "loc9=path9+IDs[0]\n",
+    "loc9=path9+IDs[3]\n",
     "\n",
     "fileSCR_14 = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_550eV_CR_ALLCH_diatomic.root\")\n",
     "path14 = \"angular_distr_el/CH14/\"\n",
@@ -117,10 +128,33 @@
     "\n",
     "pz,px,counts_newton11=fugi.import_TH2Dgeneric(fileSCR_11,loc11+\"/Newton plot\")\n",
     "pz,px,counts_newton9=fugi.import_TH2Dgeneric(fileSCR_9,loc9+\"/Newton plot\")\n",
+    "# check_ion[2]_neutral_xy\n",
+    "# KER, p_sumx vs p_sumz, p_relx vs p_relz\n",
     "\n",
     "tof14_1,tof14_2,couts_pipico_14=fugi.import_TH2Dgeneric(fileSCR_14,loc14+\"/PIPICO\")\n",
-    "tof11_1,tof11_2,couts_pipico_11=fugi.import_TH2Dgeneric(fileSCR_11,loc11+\"/PIPICO\")\n",
-    "tof9_1,tof9_2,couts_pipico_9=fugi.import_TH2Dgeneric(fileSCR_9,loc9+\"/PIPICO\")"
+    "tof11_1,tof11_2,couts_pipico_11=fugi.import_TH2Dgeneric(fileSCR_11,\"test/PIPICO\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newton12_all=[]; newton11_all=[]; newton9_all=[]\n",
+    "for i,el in enumerate(IDs):\n",
+    "    if i == 1:\n",
+    "        loc12=path12+el\n",
+    "        dummy1,dummy2,plot=fugi.import_TH2Dgeneric(fileSCR_12,loc12+\"/Newton plot\")\n",
+    "        newton12_all.append(plot)\n",
+    "    else:\n",
+    "        loc11=path11+el\n",
+    "        dummy1,dummy2,plot=fugi.import_TH2Dgeneric(fileSCR_11,loc11+\"/Newton plot\")\n",
+    "        newton11_all.append(plot)\n",
+    "    if i <=3:\n",
+    "        loc9=path9+el\n",
+    "        dummy1,dummy2,plot=fugi.import_TH2Dgeneric(fileSCR_9,loc9+\"/Newton plot\")\n",
+    "        newton9_all.append(plot)"
    ]
   },
   {
@@ -456,7 +490,7 @@
     "\n",
     "cbar.ax.set_ylabel('normalized counts')\n",
     "\n",
-    "fig.savefig(dir+\"N2_pipico_insert.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "fig.savefig(dirN2+\"N2_pipico_insert.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
     "# fig.savefig(dir+\"N2_pipico_insert.svg\", dpi=300, transparent=False)"
    ]
   },
@@ -527,7 +561,7 @@
     "\n",
     "ax.set_xlabel('tof1 [ns]')\n",
     "ax.set_ylabel('tof2 [ns]')\n",
-    "ax.set_xlim(3900,4500)\n",
+    "ax.set_xlim(3850,4500)\n",
     "ax.set_ylim(6450,6800)\n",
     "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
@@ -547,6 +581,7 @@
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "couts_pipico_9_red=np.ma.masked_array(couts_pipico_9,couts_pipico_9<2)\n",
+    "# norm=mcolors.LogNorm(couts_pipico_9_red.min(),couts_pipico_9_red.max())\n",
     "\n",
     "cs=ax.pcolormesh(tof9_1,tof9_2,couts_pipico_9_red.T, shading='gouraud')\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
@@ -599,30 +634,29 @@
    "source": [
     "#sum el w-layer\n",
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "counts_newton11_red=np.ma.masked_array(counts_newton11,counts_newton11<2)\n",
     "\n",
-    "cs=ax.pcolormesh(pz,px,counts_newton11_red.T, shading='gouraud')\n",
+    "ID_local=str(IDs[1]).split(\"_\")[0]\n",
+    "counts_newton12_red=np.ma.masked_array(newton12_all[0],newton12_all[0]<1)\n",
+    "\n",
+    "cs=ax.pcolormesh(pz,px,counts_newton12_red.T, shading='gouraud')\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
     "\n",
-    "ax.set_xlabel('$p_{z}$ [a.u.]')\n",
-    "ax.set_ylabel('$p_{x}$ [a.u.]')\n",
+    "ax.set_xlabel('$p_{x}$ [a.u.]')\n",
+    "ax.set_ylabel('$p_{y}$ [a.u.]')\n",
     "ax.set_xlim(-2,1.5)\n",
     "ax.set_ylim(-1.5,1.5)\n",
     "\n",
     "arrow1 = patches.Arrow(0, 0, 1, 0, width=0.1, color=\"r\", alpha=0.6)\n",
     "ax.add_patch(arrow1)\n",
-    "# arrow2 = patches.Arrow(0, 0, -0.8, 0.3, width=0.1, color=\"r\", alpha=0.4)\n",
-    "# ax.add_patch(arrow2)\n",
-    "# arrow3 = patches.Arrow(0, 0, -0.15, -0.25, width=0.1, color=\"r\", alpha=0.4)\n",
-    "# ax.add_patch(arrow3)\n",
-    "ax.text(0.85,0.15, \"ion 1\") #,fontweight=\"bold\")\n",
+    "text=ax.text(0.55,0.15, \"$CH_{2}O^{+}$\") #,fontweight=\"bold\")\n",
+    "text.set_path_effects([PathEffects.withStroke(linewidth=4, foreground='w', alpha=0.5)])\n",
     "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
-    "cbar.set_ticks([counts_newton11_red.min(),counts_newton11.max()])\n",
+    "cbar.set_ticks([counts_newton12_red.min(),counts_newton12_red.max()])\n",
     "cbar.set_ticklabels([\"min\",\"max\"])\n",
     "cbar.ax.set_ylabel('normalized counts')\n",
     "\n",
-    "fig.savefig(dir+\"Netwon_ch11.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "fig.savefig(dir+\"Netwon_\"+ID_local+\"_ch12.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
     "# fig.savefig(dir+\"el_sum_wlayer.svg\", dpi=300, transparent=False)"
    ]
   },
@@ -634,31 +668,176 @@
    "source": [
     "#sum el w-layer\n",
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "\n",
+    "ID_local=str(IDs[0]).split(\"_\")[0]\n",
+    "counts_newton11_red=np.ma.masked_array(newton11_all[0],newton11_all[0]<2)\n",
+    "\n",
+    "cs=ax.pcolormesh(pz,px,counts_newton11_red.T, shading='gouraud')\n",
+    "# ax.set_title(\"fish fillet y-axis\")\n",
+    "\n",
+    "ax.set_xlabel('$p_{x}$ [a.u.]')\n",
+    "ax.set_ylabel('$p_{y}$ [a.u.]')\n",
+    "ax.set_xlim(-2,1.5)\n",
+    "ax.set_ylim(-1.5,1.5)\n",
+    "\n",
+    "arrow1 = patches.Arrow(0, 0, 1, 0, width=0.1, color=\"r\", alpha=0.6)\n",
+    "ax.add_patch(arrow1)\n",
+    "if ID_local == \"ID\":\n",
+    "        text=ax.text(0.55,0.15, \"$C_{2}H_{i=1,2,3}^{+}$\") #,fontweight=\"bold\")\n",
+    "if ID_local == \"ID2\":\n",
+    "        text=ax.text(0.85,0.15, \"$C_{2}H^{+}$\") #,fontweight=\"bold\")\n",
+    "if ID_local == \"ID3\":\n",
+    "        text=ax.text(0.85,0.15, \"$C_{2}H_{2}^{+}$\") #,fontweight=\"bold\")\n",
+    "if ID_local == \"ID4\":\n",
+    "        text=ax.text(0.85,0.15, \"$C_{2}H_{3}^{+}$\") #,fontweight=\"bold\")\n",
+    "        ax.set_xlabel('$p_{x}$ [a.u.]')\n",
+    "\n",
+    "text.set_path_effects([PathEffects.withStroke(linewidth=4, foreground='w', alpha=0.5)])\n",
+    "\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.set_ticks([counts_newton11_red.min(),counts_newton11_red.max()])\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.ax.set_ylabel('normalized counts')\n",
+    "\n",
+    "fig.savefig(dir+\"Netwon_\"+ID_local+\"_ch11.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "# fig.savefig(dir+\"el_sum_wlayer.svg\", dpi=300, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sum el w-layer\n",
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "\n",
+    "ID_local=str(IDs[0]).split(\"_\")[0]\n",
+    "counts_newton9_red=np.ma.masked_array(newton9_all[0],newton9_all[0]<2)\n",
+    "\n",
     "counts_newton9_red=np.ma.masked_array(counts_newton9,counts_newton9<10)\n",
     "\n",
     "cs=ax.pcolormesh(pz,px,counts_newton9_red.T, shading='gouraud')\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
     "\n",
-    "ax.set_xlabel('$p_{z}$ [a.u.]')\n",
-    "ax.set_ylabel('$p_{x}$ [a.u.]')\n",
+    "ax.set_xlabel('$p_{x}$ [a.u.]')\n",
+    "ax.set_ylabel('$p_{y}$ [a.u.]')\n",
     "ax.set_xlim(-2,1.5)\n",
     "ax.set_ylim(-1.5,1.5)\n",
     "\n",
     "arrow1 = patches.Arrow(0, 0, 1, 0, width=0.1,color=\"r\", alpha=0.6)\n",
     "ax.add_patch(arrow1)\n",
-    "# arrow2 = patches.Arrow(0, 0, -0.6, 0.5, width=0.1,color=\"r\", alpha=0.4)\n",
-    "# ax.add_patch(arrow2)\n",
-    "# arrow3 = patches.Arrow(0, 0, 0.1, -0.3, width=0.1,color=\"r\", alpha=0.4)\n",
-    "# ax.add_patch(arrow3)\n",
-    "ax.text(0.85,0.15, \"ion 1\") #,fontweight=\"bold\")\n",
+    "if ID_local == \"ID\":\n",
+    "    text=ax.text(0.55,0.15, \"$CH_{i=0,1,2,3}^{+}$\") #,fontweight=\"bold\")\n",
+    "if ID_local == \"ID1\":\n",
+    "    text=ax.text(0.85,0.15, \"$CH^{+}$\") #,fontweight=\"bold\")\n",
+    "if ID_local == \"ID2\":\n",
+    "    text=ax.text(0.85,0.15, \"$CH_{2}^{+}$\") #,fontweight=\"bold\")\n",
+    "if ID_local == \"ID3\":\n",
+    "    text=ax.text(0.85,0.15, \"$CH_{3}^{+}$\") #,fontweight=\"bold\")\n",
     "\n",
+    "text.set_path_effects([PathEffects.withStroke(linewidth=4, foreground='w', alpha=0.5)])\n",
     "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
-    "cbar.set_ticks([counts_newton9_red.min(),counts_newton9.max()])\n",
+    "cbar.set_ticks([counts_newton9_red.min(),counts_newton9_red.max()])\n",
     "cbar.set_ticklabels([\"min\",\"max\"])\n",
     "cbar.ax.set_ylabel('normalized counts')\n",
     "\n",
-    "fig.savefig(dir+\"Netwon_ch9.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "fig.savefig(dir+\"Netwon_\"+ID_local+\"_ch9.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "# fig.savefig(dir+\"el_sum_wlayer.svg\", dpi=300, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sum el w-layer\n",
+    "fig,axes= plt.subplots(4,1, figsize=(7, 25), sharex=True, constrained_layout=True)\n",
+    "\n",
+    "for i,ax in enumerate(axes.ravel()):\n",
+    "    # el=np.ma.masked_array(newton11_all[i+1],newton11_all[i+1]<5)\n",
+    "    el=np.ma.masked_array(newton11_all[i],newton11_all[i]<1)\n",
+    "    cs=ax.pcolormesh(pz,px,el.T, shading='gouraud')\n",
+    "\n",
+    "    ax.yaxis.set_label_position(\"right\")\n",
+    "    ax.yaxis.tick_right()\n",
+    "    ax.set_ylabel('$p_{y}$ [a.u.]')\n",
+    "    ax.set_xlim(-2,1.5)\n",
+    "    ax.set_ylim(-1.5,1.5)\n",
+    "\n",
+    "    arrow1 = patches.Arrow(0, 0, 1, 0, width=0.1,color=\"r\", alpha=0.6)\n",
+    "    ax.add_patch(arrow1)\n",
+    "\n",
+    "    if i == 0:\n",
+    "        text=ax.text(0.4,0.15, \"$C_{2}H_{i=1,2,3}^{+}$\") #,fontweight=\"bold\")\n",
+    "    if i == 1:\n",
+    "        text=ax.text(0.85,0.15, \"$C_{2}H^{+}$\") #,fontweight=\"bold\")\n",
+    "    if i == 2:\n",
+    "        text=ax.text(0.85,0.15, \"$C_{2}H^{+}$\") #,fontweight=\"bold\")\n",
+    "    if i == 3:\n",
+    "        text=ax.text(0.85,0.15, \"$C_{2}H_{3}^{+}$\") #,fontweight=\"bold\")\n",
+    "        ax.set_xlabel('$p_{x}$ [a.u.]')\n",
+    "    \n",
+    "    text.set_path_effects([PathEffects.withStroke(linewidth=4, foreground='w', alpha=0.5)])\n",
+    "\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, location='top', ax=axes[0])\n",
+    "cbar.set_ticks([el.min(),el.max()])\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "# cbar.ax.set_ylabel('normalized counts', rotation=\"horizontal\", ha='right')\n",
+    "\n",
+    "fig.savefig(dir+\"Netwon_all_CH11.png\", dpi=300, transparent=False, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.patheffects as PathEffects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sum el w-layer\n",
+    "fig,axes= plt.subplots(4,1, figsize=(7, 25), sharex=True, constrained_layout=True)\n",
+    "\n",
+    "for i,ax in enumerate(axes.ravel()):\n",
+    "    # el=np.ma.masked_array(newton9_all[i+1],newton9_all[i+1]<1)\n",
+    "    el=np.ma.masked_array(newton9_all[i],newton9_all[i]<1)\n",
+    "    cs=ax.pcolormesh(pz,px,el.T, shading='gouraud')\n",
+    "\n",
+    "    ax.set_ylabel('$p_{y}$ [a.u.]')\n",
+    "    ax.set_xlim(-2,1.5)\n",
+    "    ax.set_ylim(-1.5,1.5)\n",
+    "\n",
+    "    arrow1 = patches.Arrow(0, 0, 1, 0, width=0.1,color=\"r\", alpha=0.6)\n",
+    "    ax.add_patch(arrow1)\n",
+    "\n",
+    "    if i == 0:\n",
+    "        text=ax.text(0.4,0.15, \"$CH_{i=0,1,2,3}^{+}$\") #,fontweight=\"bold\")\n",
+    "    if i == 1:\n",
+    "        text=ax.text(0.85,0.15, \"$CH^{+}$\") #,fontweight=\"bold\")\n",
+    "    if i == 2:\n",
+    "        text=ax.text(0.85,0.15, \"$CH_{2}^{+}$\") #,fontweight=\"bold\")\n",
+    "    if i == 3:\n",
+    "        text=ax.text(0.85,0.15, \"$CH_{3}^{+}$\") #,fontweight=\"bold\")\n",
+    "        ax.set_xlabel('$p_{x}$ [a.u.]')\n",
+    "    \n",
+    "    text.set_path_effects([PathEffects.withStroke(linewidth=4, foreground='w', alpha=0.5)])\n",
+    "\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, location='top', ax=axes[0])\n",
+    "cbar.set_ticks([el.min(),el.max()])\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "# cbar.ax.set_ylabel('normalized counts', rotation=\"horizontal\", ha='right')\n",
+    "\n",
+    "fig.savefig(dir+\"Netwon_all_CH9.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
     "# fig.savefig(dir+\"el_sum_wlayer.svg\", dpi=300, transparent=False)"
    ]
   },
