bbox_inches keyword

--- a/N2_calibration.ipynb
+++ b/N2_calibration.ipynb
@@ -27,6 +27,7 @@
     "from scipy.stats import norm\n",
     "from scipy.optimize import curve_fit\n",
     "from scipy import interpolate\n",
+    "from scipy.ndimage.filters import gaussian_filter\n",
     "\n",
     "import itertools\n",
     "\n",
@@ -112,8 +113,8 @@
     "ax.set_ylim([0, 55000])\n",
     "ax.grid()\n",
     "\n",
-    "fig.savefig(dir+\"KER_gaus.png\", dpi=300, transparent=False)\n",
-    "fig.savefig(dir+\"KER_gaus.svg\", dpi=300, transparent=False)"
+    "fig.savefig(dir+\"KER_gaus.png\", dpi=300, transparent=False,bbox_inches='tight')\n",
+    "fig.savefig(dir+\"KER_gaus.svg\", dpi=300, transparent=False,bbox_inches='tight')"
    ]
   },
   {
@@ -136,8 +137,8 @@
     "# ax.set_rti  # Move radial labels away from plotted line\n",
     "ax.grid(True)\n",
     "\n",
-    "fig.savefig(dir+\"MFPAD_err.png\", dpi=300, transparent=False)\n",
-    "fig.savefig(dir+\"MFPAD_err.svg\", dpi=300, transparent=False)"
+    "fig.savefig(dir+\"MFPAD_err.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "fig.savefig(dir+\"MFPAD_err.svg\", dpi=300, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -147,16 +148,14 @@
    "outputs": [],
    "source": [
     "#3D MFPAD\n",
-    "from scipy.ndimage.filters import gaussian_filter\n",
     "Yn, Xn = np.meshgrid(ctheta_mol, phi_mol2D)\n",
     "\n",
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "aspect=(phi_mol1D.max()/ctheta_mol.max())\n",
     "# cs=ax.contourf(phi_mol2D,ctheta_mol,MFPAD3D.T,cmap=cmap_temp)\n",
-    "cs=ax.pcolormesh(phi_mol2D,ctheta_mol,MFPAD3D.T,shading='gouraud', cmap=cmap_temp)\n",
-    "ax.contour(Xn, Yn, gaussian_filter(MFPAD3D, 1.), 15, colors='k', alpha=0.15)\n",
-    "#too much computational intensive\n",
-    "# cs,ax=fugi.plot_interpolation(phi_mol2D,ctheta_mol,MFPAD3D.T,ax=ax, xstep=1, ystep=0.05, cmap=cmap_temp)\n",
+    "# cs=ax.pcolormesh(phi_mol2D,ctheta_mol,MFPAD3D.T,shading='gouraud', cmap=cmap_temp)\n",
+    "# ax.contour(Xn, Yn, gaussian_filter(MFPAD3D, 1.), 15, colors='k', alpha=0.15)\n",
+    "cs,ax=fugi.plot_interpolation(phi_mol2D,ctheta_mol,MFPAD3D.T,ax=ax, xstep=0.1, ystep=0.01, cmap=cmap_temp)\n",
     "\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
     "\n",
@@ -165,11 +164,37 @@
     "ax.set_aspect(aspect)\n",
     "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
-    "cbar.set_ticks([MFPAD3D.min(),MFPAD3D.max()])\n",
+    "cbar.set_ticks([MFPAD3D.min()*1.03,MFPAD3D.max()*1.001])\n",
     "cbar.set_ticklabels([\"min\",\"max\"])\n",
     "cbar.ax.set_ylabel('normalized counts')\n",
     "\n",
-    "fig.savefig(dir+\"MFPAD3d.png\", dpi=300, transparent=False)\n",
+    "fig.savefig(dir+\"MFPAD3d_cmap.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "# fig.savefig(dir+\"MFPAD3d.svg\", dpi=300, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "Yn, Xn = np.meshgrid(ctheta_mol, phi_mol2D)\n",
+    "\n",
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "aspect=(phi_mol1D.max()/ctheta_mol.max())\n",
+    "cs,ax=fugi.plot_interpolation(phi_mol2D,ctheta_mol,MFPAD3D.T,ax=ax, xstep=0.1, ystep=0.01)\n",
+    "\n",
+    "ax.set_xlabel('phi [DEG]')\n",
+    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.set_ticks([MFPAD3D.min()*1.03,MFPAD3D.max()*1.001])\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.ax.set_ylabel('normalized counts')\n",
+    "\n",
+    "fig.savefig(dir+\"MFPAD3d.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
     "# fig.savefig(dir+\"MFPAD3d.svg\", dpi=300, transparent=False)"
    ]
   },
@@ -210,6 +235,7 @@
     "\n",
     "cax = fig.add_axes([1.02, 0.20, 0.01, 0.58])\n",
     "cbar = fig.colorbar(cs3,shrink=0.9, cax=cax)\n",
+    "# cbar= fig.colorbar(cs3,fraction=0.05, pad=0.04) # in case the previous doesn't work\n",
     "cbar.set_ticks([np.ma.masked_array(p_rel_xy.T,p_rel_xy.T<3).min(),p_rel_xz.max()*1.03])\n",
     "cbar.set_ticklabels([\"min\",\"max\"])\n",
     "cbar.ax.set_ylabel('normalized counts')\n",
@@ -260,12 +286,13 @@
     "\n",
     "cax = fig.add_axes([1.02, 0.20, 0.01, 0.58])\n",
     "cbar = fig.colorbar(cs3,shrink=0.9, cax=cax)\n",
+    "# cbar= fig.colorbar(cs3,fraction=0.05, pad=0.04) # in case the previous doesn't work\n",
     "cbar.set_ticks([p12_z.T.min()+4,p12_z.max()])\n",
     "cbar.set_ticklabels([\"min\",\"max\"])\n",
     "cbar.ax.set_ylabel('normalized counts')\n",
     "\n",
-    "fig.savefig(dir+\"ionmom_N-N.png\", bbox_inches='tight', dpi=300, transparent=False)\n",
-    "# fig.savefig(dir+\"ionmom_N-N.svg\", bbox_inches='tight', dpi=300, transparent=False)"
+    "fig.savefig(dir+\"ionmom_N-N.png\", bbox_inches='tight', dpi=300, transparent=False, bbox_inches='tight')\n",
+    "# fig.savefig(dir+\"ionmom_N-N.svg\", bbox_inches='tight', dpi=300, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -401,12 +428,12 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3.8.10 64-bit ('base': conda)",
    "name": "python388jvsc74a57bd00314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
   },
   "language_info": {
    "name": "python",
-   "version": "3.8.8"
+   "version": "3.8.10"
   },
   "metadata": {
    "interpreter": {
