--- a/diatomic_ALLCH.ipynb
+++ b/diatomic_ALLCH.ipynb
@@ -21,6 +21,7 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import LightSource\n",
     "%matplotlib inline\n",
+    "%config InlineBackend.figure_formats=[\"png\"]\n",
     "\n",
     "import re\n",
     "\n",
@@ -75,6 +76,8 @@
     "# CH=\"ALL_CH\";\n",
     "# # CH=\"CH14\";\n",
     "\n",
+    "#True to use the MFPAD projection (16,) instead of ctheta (30,)\n",
+    "projection=False\n",
     "\n",
     "if CH==\"ALL_CH\":\n",
     "    # path = \"angular_distr_el/\"+CH+\"/test\"\n",
@@ -126,19 +129,27 @@
     "    a=16 #select resolution of the imported graph for the ALL comnbined.\n",
     "\n",
     "    MFPAD_RCR_all,MFPAD_RCR_en_all,ctheta_RCR_all,ctheta_RCR_err_all,PECD_axis,ctheta_axis,ctheta_axis_red=fugi.import_PECD3D(fileRCR, loc, a=a,  full=True)\n",
-    "    MFPAD_RCL_all,MFPAD_RCL_en_all,ctheta_RCL_all,ctheta_RCL_err_all=fugi.import_PECD3D(fileRCL, loc, a=a)   \n",
+    "    MFPAD_RCL_all,MFPAD_RCL_en_all,ctheta_RCL_all,ctheta_RCL_err_all=fugi.import_PECD3D(fileRCL, loc, a=a)\n",
+    "\n",
+    "    if projection:\n",
+    "        print(\"with projection: shape = (16,)\")\n",
+    "        ctheta_RCR_all=fugi.projection(MFPAD_RCR_all,alongaxis=0)\n",
+    "        ctheta_RCL_all=fugi.projection(MFPAD_RCL_all,alongaxis=0)\n",
+    "        ctheta_RCR_err_all=ctheta_RCR_all**-0.5\n",
+    "        ctheta_RCL_err_all=ctheta_RCL_all**-0.5\n",
+    "        ctheta_axis_red=(PECD_axis[0][1:] + PECD_axis[0][:-1])/2 #! reduced of 1 dimension\n",
     "\n",
     "    #normalise before ANY PECD\n",
     "    MFPAD_RCR_all_norm=fugi.normalise_with_err(MFPAD_RCR_all)\n",
     "    MFPAD_RCL_all_norm=fugi.normalise_with_err(MFPAD_RCL_all)\n",
-    "    ctheta_RCR_all_norm, ctheta_RCR_err_all_norm=fugi.normalise_with_err(ctheta_RCR_all,ctheta_RCR_err_all)\n",
-    "    ctheta_RCL_all_norm, ctheta_RCL_err_all_norm=fugi.normalise_with_err(ctheta_RCL_all,ctheta_RCL_err_all)\n",
-    "    \n",
+    "    ctheta_RCR_all_norm=fugi.normalise_with_err(ctheta_RCR_all)\n",
+    "    ctheta_RCL_all_norm=fugi.normalise_with_err(ctheta_RCL_all)\n",
+    "\n",
     "    #Combining the two polarizations: single intesity fit\n",
     "    ctheta_R_all=np.add(ctheta_RCR_all,np.flip(ctheta_RCL_all))\n",
     "    ctheta_R_all_norm=np.add(ctheta_RCR_all_norm,np.flip(ctheta_RCL_all_norm))\n",
-    "    ctheta_R_all_err=fugi.error_calc(ctheta_RCR_err_all,np.flip(ctheta_RCL_err_all)) #SUM PROPAGATION\n",
-    "    \n",
+    "    ctheta_R_all_err=fugi.error_calc(ctheta_RCR_err_all,np.flip(ctheta_RCL_err_all),error_type=\"SUM\") #SUM PROPAGATION\n",
+    "\n",
     "    #PECD between two diffrent helicities\n",
     "    cPECD_R_all =  np.divide(np.subtract(ctheta_RCR_all_norm,ctheta_RCL_all_norm),np.add(ctheta_RCR_all_norm,ctheta_RCL_all_norm))\n",
     "    errPECD_R_all = fugi.error_calc(ctheta_RCR_all,ctheta_RCL_all)\n",
@@ -150,28 +161,35 @@
     "        MFPAD_SCR_all,MFPAD_SCR_en_all,ctheta_SCR_all,ctheta_SCR_err_all=fugi.import_PECD3D(fileSCR, loc, a=a)\n",
     "        MFPAD_SCL_all,MFPAD_SCL_en_all,ctheta_SCL_all,ctheta_SCL_err_all=fugi.import_PECD3D(fileSCL, loc, a=a)\n",
     "\n",
+    "        if projection:\n",
+    "            ctheta_SCR_all=fugi.projection(MFPAD_SCR_all,alongaxis=0)\n",
+    "            ctheta_SCL_all=fugi.projection(MFPAD_SCL_all,alongaxis=0)\n",
+    "            ctheta_SCR_err_all=ctheta_SCR_all**-0.5\n",
+    "            ctheta_SCL_err_all=ctheta_SCL_all**-0.5\n",
+    "\n",
     "        #normalise before ANY PECD\n",
     "        MFPAD_SCR_all_norm=fugi.normalise_with_err(MFPAD_SCR_all)\n",
     "        MFPAD_SCL_all_norm=fugi.normalise_with_err(MFPAD_SCL_all)\n",
-    "        ctheta_SCR_all_norm, ctheta_SCR_err_all_norm=fugi.normalise_with_err(ctheta_SCR_all,ctheta_SCR_err_all)\n",
-    "        ctheta_SCL_all_norm, ctheta_SCL_err_all_norm=fugi.normalise_with_err(ctheta_SCL_all,ctheta_SCL_err_all)\n",
+    "        ctheta_SCR_all_norm=fugi.normalise_with_err(ctheta_SCR_all)\n",
+    "        ctheta_SCL_all_norm=fugi.normalise_with_err(ctheta_SCL_all)\n",
     "\n",
     "        ctheta_S_all=np.add(ctheta_SCR_all,np.flip(ctheta_SCL_all))\n",
     "        ctheta_S_all_norm=np.add(ctheta_SCR_all_norm,np.flip(ctheta_SCL_all_norm))\n",
-    "        ctheta_S_all_err=fugi.error_calc(ctheta_SCR_err_all,np.flip(ctheta_SCL_err_all)) #SUM PROPAGATION\n",
+    "        ctheta_S_all_err=fugi.error_calc(ctheta_SCR_err_all,np.flip(ctheta_SCL_err_all),error_type=\"SUM\") #SUM PROPAGATION\n",
     "\n",
     "        #single PECD on just S enantiomer\n",
     "        cPECD_S_all =  np.divide(np.subtract(ctheta_SCR_all_norm,ctheta_SCL_all_norm),np.add(ctheta_SCR_all_norm,ctheta_SCL_all_norm))\n",
     "        errPECD_S_all = fugi.error_calc(ctheta_SCR_all,ctheta_SCL_all)\n",
-    "    \n",
+    "\n",
     "        #for 550eV total cos and PECD\n",
     "        ctheta_all=np.add(ctheta_R_all,np.flip(ctheta_S_all))\n",
-    "        ctheta_all_err=fugi.error_calc(ctheta_R_all_err,np.flip(ctheta_S_all_err)) #SUM PROPAGATION\n",
+    "        ctheta_all_err=fugi.error_calc(ctheta_R_all_err,np.flip(ctheta_S_all_err),error_type=\"SUM\") #SUM PROPAGATION\n",
     "\n",
     "        cPECD_all =  np.divide(np.subtract(ctheta_R_all_norm,ctheta_S_all_norm),np.add(ctheta_R_all_norm,ctheta_S_all_norm))\n",
-    "        errPECD_all = fugi.error_calc(ctheta_R_all,ctheta_S_all,ctheta_R_all_err)\n",
+    "        errPECD_all = fugi.error_calc(ctheta_R_all,ctheta_S_all)\n",
     "\n",
-    "        mPECD_S_all = np.divide(np.subtract(MFPAD_SCR_all_norm,MFPAD_SCL_all_norm),np.add(MFPAD_SCR_all_norm,MFPAD_SCL_all_norm))"
+    "        mPECD_S_all = np.divide(np.subtract(MFPAD_SCR_all_norm,MFPAD_SCL_all_norm),np.add(MFPAD_SCR_all_norm,MFPAD_SCL_all_norm))\n",
+    "        "
    ]
   },
   {
@@ -185,51 +203,53 @@
     "    MFPAD_RCR,MFPAD_RCR_en,ctheta_RCR,ctheta_RCR_err,ctheta_pol_RCR,ctheta_pol_RCR_err,PECD_axis,ctheta_axis,ctheta_axis_red=fugi.import_PECD3D_cos(fileRCR,loc,full=True)\n",
     "    MFPAD_RCL,MFPAD_RCL_en,ctheta_RCL,ctheta_RCL_err,ctheta_pol_RCL,ctheta_pol_RCL_err=fugi.import_PECD3D_cos(fileRCL, loc)\n",
     "\n",
-    "    if fileSCL and fileSCR is not None:    \n",
-    "        MFPAD_SCR,MFPAD_SCR_en,ctheta_SCR,ctheta_SCR_err,ctheta_pol_SCR,ctheta_pol_SCR_err=fugi.import_PECD3D_cos(fileSCR, loc)\n",
-    "        MFPAD_SCL,MFPAD_SCL_en,ctheta_SCL,ctheta_SCL_err,ctheta_pol_SCL,ctheta_pol_SCL_err=fugi.import_PECD3D_cos(fileSCL, loc)\n",
-    "\n",
     "    #normalise before ANY PECD\n",
-    "    ctheta_RCR_norm, ctheta_RCR_err_norm=fugi.normalise_with_err(ctheta_RCR,ctheta_RCR_err)\n",
-    "    ctheta_RCL_norm, ctheta_RCL_err_norm=fugi.normalise_with_err(ctheta_RCL,ctheta_RCL_err)\n",
-    "    ctheta_pol_RCR_norm, ctheta_pol_RCR_err_norm=fugi.normalise_with_err(ctheta_pol_RCR,ctheta_pol_RCR_err)\n",
-    "    ctheta_pol_RCL_norm, ctheta_pol_RCL_err_norm=fugi.normalise_with_err(ctheta_pol_RCL,ctheta_pol_RCL_err)\n",
+    "    ctheta_RCR_norm=fugi.normalise_with_err(ctheta_RCR)\n",
+    "    ctheta_RCL_norm=fugi.normalise_with_err(ctheta_RCL)\n",
+    "\n",
+    "    ctheta_pol_RCR_norm=fugi.normalise_with_err(ctheta_pol_RCR)\n",
+    "    ctheta_pol_RCL_norm=fugi.normalise_with_err(ctheta_pol_RCL)\n",
     "    \n",
     "    #Combining the two polarizations: single intesity fit\n",
     "    ctheta_R=np.add(ctheta_RCR,np.flip(ctheta_RCL))\n",
     "    ctheta_R_norm=np.add(ctheta_RCR_norm,np.flip(ctheta_RCL_norm))\n",
-    "    ctheta_R_err=fugi.error_calc(ctheta_RCR_err,np.flip(ctheta_RCL_err))\n",
+    "    ctheta_R_err=fugi.error_calc(ctheta_RCR_err,np.flip(ctheta_RCL_err),error_type=\"SUM\")\n",
     "\n",
     "    #Combining the two polarizations: single intesity fit POL PLANE\n",
     "    ctheta_R_pol=np.add(ctheta_pol_RCR,np.flip(ctheta_pol_RCL))\n",
     "    ctheta_R_pol_norm=np.add(ctheta_pol_RCR_norm,np.flip(ctheta_pol_RCL_norm))\n",
-    "    ctheta_R_pol_err= fugi.error_calc(ctheta_pol_RCR_err,np.flip(ctheta_pol_RCL_err))\n",
+    "    ctheta_R_pol_err=fugi.error_calc(ctheta_pol_RCR_err,np.flip(ctheta_pol_RCL_err),error_type=\"SUM\")\n",
     "\n",
     "    #PECD between two diffrent helicities\n",
-    "    cPECD_R =  np.divide(np.subtract(ctheta_RCR_norm,ctheta_RCL_norm),np.add(ctheta_RCR_norm,ctheta_RCL_norm))\n",
-    "    errPECD_R = fugi.error_calc(ctheta_RCR,ctheta_RCL)\n",
+    "    cPECD_R=np.divide(np.subtract(ctheta_RCR_norm,ctheta_RCL_norm),np.add(ctheta_RCR_norm,ctheta_RCL_norm))\n",
+    "    errPECD_R=fugi.error_calc(ctheta_RCR,ctheta_RCL)\n",
     "\n",
     "    #PECD between two diffrent helicities POL PLANE\n",
-    "    cPECD_R_pol =  np.divide(np.subtract(ctheta_pol_RCR_norm,ctheta_pol_RCL_norm),np.add(ctheta_pol_RCR_norm,ctheta_pol_RCL_norm))\n",
-    "    errPECD_R_pol = fugi.error_calc(ctheta_pol_RCR,ctheta_pol_RCL)\n",
+    "    cPECD_R_pol=np.divide(np.subtract(ctheta_pol_RCR_norm,ctheta_pol_RCL_norm),np.add(ctheta_pol_RCR_norm,ctheta_pol_RCL_norm))\n",
+    "    errPECD_R_pol=fugi.error_calc(ctheta_pol_RCR,ctheta_pol_RCL)\n",
     "\n",
     "    #ALL channels combined: polarization doesn´t make sense because of CH9 and CH11 three bodies\n",
     "    mPECD_R = np.divide(np.subtract(MFPAD_RCR,MFPAD_RCL),np.add(MFPAD_RCR,MFPAD_RCL))\n",
     "\n",
     "    if fileSCL and fileSCR is not None:\n",
-    "        ctheta_SCR_norm, ctheta_SCR_err_norm=fugi.normalise_with_err(ctheta_SCR,ctheta_SCR_err)\n",
-    "        ctheta_SCL_norm, ctheta_SCL_err_norm=fugi.normalise_with_err(ctheta_SCL,ctheta_SCL_err)\n",
-    "        ctheta_pol_SCR_norm, ctheta_pol_SCR_err_norm=fugi.normalise_with_err(ctheta_pol_SCR,ctheta_pol_SCR_err)\n",
-    "        ctheta_pol_SCL_norm, ctheta_pol_SCL_err_norm=fugi.normalise_with_err(ctheta_pol_SCL,ctheta_pol_SCL_err)\n",
     "\n",
-    "        ctheta_S=np.add(ctheta_SCR_norm,np.flip(ctheta_SCL_norm))\n",
+    "        MFPAD_SCR,MFPAD_SCR_en,ctheta_SCR,ctheta_SCR_err,ctheta_pol_SCR,ctheta_pol_SCR_err=fugi.import_PECD3D_cos(fileSCR, loc)\n",
+    "        MFPAD_SCL,MFPAD_SCL_en,ctheta_SCL,ctheta_SCL_err,ctheta_pol_SCL,ctheta_pol_SCL_err=fugi.import_PECD3D_cos(fileSCL, loc)\n",
+    "\n",
+    "        ctheta_SCR_norm=fugi.normalise_with_err(ctheta_SCR)\n",
+    "        ctheta_SCL_norm=fugi.normalise_with_err(ctheta_SCL)\n",
+    "\n",
+    "        ctheta_pol_SCR_norm=fugi.normalise_with_err(ctheta_pol_SCR)\n",
+    "        ctheta_pol_SCL_norm=fugi.normalise_with_err(ctheta_pol_SCL)\n",
+    "\n",
+    "        ctheta_S=np.add(ctheta_SCR,np.flip(ctheta_SCL))\n",
     "        ctheta_S_norm=np.add(ctheta_SCR_norm,np.flip(ctheta_SCL_norm))\n",
-    "        ctheta_S_err=fugi.error_calc(ctheta_SCR_err,np.flip(ctheta_SCL_err))\n",
+    "        ctheta_S_err=fugi.error_calc(ctheta_SCR_err,np.flip(ctheta_SCL_err),error_type=\"SUM\") #SUM PROPAGATION\n",
     "\n",
     "        #for 550eV total cos and PECD two enantiomers POL PLANE\n",
     "        ctheta_S_pol=np.add(ctheta_pol_SCR,np.flip(ctheta_pol_SCL))\n",
     "        ctheta_S_pol_norm=np.add(ctheta_pol_SCR_norm,np.flip(ctheta_pol_SCL_norm))\n",
-    "        ctheta_S_pol_err=fugi.error_calc(ctheta_pol_SCR_err,np.flip(ctheta_pol_SCL_err)) #SUM PROPAGATION\n",
+    "        ctheta_S_pol_err=fugi.error_calc(ctheta_pol_SCR_err,np.flip(ctheta_pol_SCL_err),error_type=\"SUM\") #SUM PROPAGATION\n",
     "\n",
     "        cPECD_S=np.divide(np.subtract(ctheta_SCR_norm,ctheta_SCL_norm),np.add(ctheta_SCR_norm,ctheta_SCL_norm))\n",
     "        errPECD_S=fugi.error_calc(ctheta_SCR,ctheta_SCL)\n",
@@ -238,21 +258,21 @@
     "        errPECD_S_pol=fugi.error_calc(ctheta_pol_SCR,ctheta_pol_SCL)\n",
     "\n",
     "        #for 550eV total cos and PECD two enantiomers\n",
-    "        ctheta=np.add(ctheta_R_norm,np.flip(ctheta_S_norm))\n",
-    "        ctheta_err=fugi.error_calc(ctheta_R_err,np.flip(ctheta_S_err)) #SUM PROPAGATION\n",
+    "        ctheta=np.add(ctheta_R,np.flip(ctheta_S))\n",
+    "        ctheta_err=fugi.error_calc(ctheta_R_err,np.flip(ctheta_S_err),error_type=\"SUM\") #SUM PROPAGATION\n",
     "\n",
     "        #for 550eV total cos and PECD two enantiomers\n",
     "        ctheta_pol=np.add(ctheta_R_pol,np.flip(ctheta_S_pol))\n",
-    "        ctheta_pol_err=fugi.error_calc(ctheta_R_pol_err,np.flip(ctheta_S_pol_err)) #SUM PROPAGATION\n",
+    "        ctheta_pol_err=fugi.error_calc(ctheta_R_pol_err,np.flip(ctheta_S_pol_err),error_type=\"SUM\") #SUM PROPAGATION\n",
     "\n",
-    "\n",
-    "        cPECD =  np.divide(np.subtract(ctheta_R_norm,ctheta_S_norm),np.add(ctheta_R_norm,ctheta_S_norm))\n",
-    "        errPECD = fugi.error_calc(ctheta_R,ctheta_S,ctheta_R_err,ctheta_S_err, error_type=\"PECD\")\n",
+    "        cPECD=np.divide(np.subtract(ctheta_R_norm,ctheta_S_norm),np.add(ctheta_R_norm,ctheta_S_norm))\n",
+    "        errPECD=fugi.error_calc(ctheta_R,ctheta_S)\n",
     "        \n",
-    "        cPECD_pol =  np.divide(np.subtract(ctheta_R_pol_norm,ctheta_S_pol_norm),np.add(ctheta_R_pol_norm,ctheta_S_pol_norm))\n",
-    "        errPECD_pol = fugi.error_calc(ctheta_R_pol,ctheta_S_pol,ctheta_R_pol,ctheta_S_pol,error_type=\"PECD\")\n",
+    "        cPECD_pol=np.divide(np.subtract(ctheta_R_pol_norm,ctheta_S_pol_norm),np.add(ctheta_R_pol_norm,ctheta_S_pol_norm))\n",
+    "        # cPECD_pol=np.divide(np.subtract(ctheta_pol_RCR_norm,ctheta_pol_RCL_norm),np.add(ctheta_pol_RCR_norm,ctheta_pol_RCL_norm))\n",
+    "        errPECD_pol=fugi.error_calc(ctheta_R_pol,ctheta_S_pol)\n",
     "        \n",
-    "        mPECD_S = np.divide(np.subtract(MFPAD_SCR,MFPAD_SCL),np.add(MFPAD_SCR,MFPAD_SCL))"
+    "        mPECD_S=np.divide(np.subtract(MFPAD_SCR,MFPAD_SCL),np.add(MFPAD_SCR,MFPAD_SCL))"
    ]
   },
   {
@@ -298,7 +318,7 @@
     "# ax1.set_aspect(aspect)\n",
     "\n",
     "\n",
-    "print(\"CR fitting and covarience \\n\", m1, \"\\n\")\n",
+    "print(\"CL fitting and covarience \\n\", m1, \"\\n\")\n",
     "\n",
     "if CH == \"ALL_CH\":\n",
     "    x_data = ctheta_axis_red;y_data = ctheta_RCR_all;y_err = ctheta_RCR_err_all\n",
@@ -330,7 +350,7 @@
     "\n",
     "print(\"CR fitting  and covarience \\n\", m2)\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/cos(th)x_single_hel_\"+CH+\"_\"+en+\"_exp.png\", figsize=(20, 10), dpi=144, transparent=False)"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/cos(th)x_single_hel_\"+CH+\"_\"+en+\"_exp.png\", figsize=(20, 10), dpi=144, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -362,15 +382,13 @@
     "m=fumi.iminuit_err_cos(x_data,y_data,y_err,limits)\n",
     "fumi.plotminuit_cos(x_data,y_data,y_err,m,ax,custom_xlim)\n",
     "if fileSCL and fileSCR is not None:\n",
-    "    if CH == \"ALL_CH\":\n",
-    "        ax.set_title(\"R + S \"+CH+\" \"+en)\n",
-    "    else:\n",
-    "        ax.set_title(\"S CL+CR \"+CH+\" \"+en)\n",
+    "    ax.set_title(\"R + S \"+CH+\" \"+en)\n",
     "else:\n",
-    "    ax.set_title(\"R CL+CR \"+CH+\" \"+en)\n",
+    "    ax.set_title(\"R CR+CL \"+CH+\" \"+en)\n",
     "\n",
     "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
     "ax.set_ylabel('counts')\n",
+    "# ax.ticklabel_format(axis=\"y\",style=\"sci\",scilimits=(0,1))\n",
     "\n",
     "fit_info = []\n",
     "for p, v, e in zip(m.parameters, m.values, m.errors):\n",
@@ -382,7 +400,7 @@
     "# ax.set_aspect(aspect)\n",
     "\n",
     "m\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/cos(th)x_combi_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False)"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/cos(th)x_combi_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -416,12 +434,9 @@
     "fumi.plotminuit2(x_data,y_data,y_err,m,ax,custom_xlim, ylim=custom_ylim)\n",
     "\n",
     "if fileSCL and fileSCR is not None:\n",
-    "    if CH == \"ALL_CH\":\n",
-    "        ax.set_title(\"R + S all dir \"+CH+\" \"+en)\n",
-    "    else:\n",
-    "        ax.set_title(\"S CL+CR all dir \"+CH+\" \"+en)\n",
+    "    ax.set_title(\"R - S all dir \"+CH+\" \"+en)\n",
     "else:\n",
-    "    ax.set_title(\"R CL+CR all dir \"+CH+\" \"+en)\n",
+    "    ax.set_title(\"R CR-CL all dir \"+CH+\" \"+en)\n",
     "\n",
     "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
     "ax.set_ylabel('PECD')\n",
@@ -437,7 +452,7 @@
     "\n",
     "m\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_random_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False)"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_random_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -446,12 +461,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if CH == \"CH14\":\n",
+    "if CH==\"CH14\":\n",
     "    #PECD INTERPOLATION POL\n",
     "    # import functions_minuit as fumi\n",
     "\n",
     "    fig,ax= plt.subplots()\n",
-    "\n",
     "    custom_xlim = (-1, 1)\n",
     "    custom_ylim = (-0.15, 0.15)\n",
     "\n",
@@ -467,12 +481,9 @@
     "    fumi.plotminuit2(x_data,y_data,y_err,m,ax,custom_xlim, ylim=custom_ylim)\n",
     "\n",
     "    if fileSCL and fileSCR is not None:\n",
-    "    if CH == \"ALL_CH\":\n",
-    "        ax.set_title(\"R + S pol \"+CH+\" \"+en)\n",
+    "        ax.set_title(\"R - S pol \"+CH+\" \"+en)\n",
     "    else:\n",
-    "        ax.set_title(\"S CL+CR pol \"+CH+\" \"+en)\n",
-    "    else:\n",
-    "        ax.set_title(\"R CL+CR pol \"+CH+\" \"+en)\n",
+    "        ax.set_title(\"R CR-CL pol \"+CH+\" \"+en)\n",
     "\n",
     "    ax.set_xlabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_ylabel('PECD')\n",
@@ -488,7 +499,7 @@
     "\n",
     "    print(m)\n",
     "\n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_pol_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False)"
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_pol_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -543,11 +554,18 @@
     "\n",
     "file1.close() "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3.8.10 64-bit ('base': conda)",
    "name": "python388jvsc74a57bd00314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
   },
   "language_info": {
@@ -560,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   },
   "metadata": {
    "interpreter": {
